pass on section 1,2; reorganize section1,3

--- a/ref.bib
+++ b/ref.bib
@@ -21,6 +21,13 @@
         howpublished = "\url{https://computing.llnl.gov/tutorials/moab}",
 }
 
+@MISC{Cobalt,
+	 title = {{Cobalt Resource Manager}},
+	 author = {Paul Rich, et al.},
+	 year = {February 4, 2016},
+	 howpublished = "\url{https://trac.mcs.anl.gov/projects/cobalt}",
+}
+
 @MISC{JobTrace,
         title = {{The ANL Intrepid Log}},
         howpublished = "\url{http://www.cs.huji.ac.il/labs/parallel/workload/l_anl_int}",
