--- a/model.tex
+++ b/model.tex
@@ -160,3 +160,37 @@ The compute nodes will be released after all the output data are moved into $bb\
 Jobs at \textit{stage-out} phase only holds $bb\_out$ burst buffer. 
 Once all the output data are drained out to the external storage,  
 $bb\_out$ is released.
+
+
+
+
+\begin{table}[!htbp] 
+        \renewcommand{\arraystretch}{1.3}
+        \caption{Summary of Symbols}
+        \label{Tab:Symbols}
+        \centering
+        \begin{tabular}{l|l}
+                \hline
+                $CN$ & number of total compute nodes \\
+                $BB$ & amount of total burst buffer nodes \\
+                $CN_{available}$ & number of available compute nodes \\
+                $BB_{available}$ & amount of available burst buffer nodes \\
+                $c_i$ & compute node demand of $job_i$ \\
+                $bb\_in_i$ & burst buffer demand of $job_i$ at \textit{stage-in} phase \\
+                $bb\_run_i$ & burst buffer demand of $job_i$ at \textit{running} phase \\
+                $bb\_out_i$ & burst buffer demand of $job_i$ at \textit{stage-out} phase \\
+                $rt_i$ & running time of $job_i$ \\
+                $ert_i$ & estimated or expected running time of $job_i$ \\
+                $Q_I, Q_R, Q_O$ & queues for \textit{stage-in, running, stage-out} phase \\
+                $J_{Q_I}, J_{Q_R}, J_{Q_O}$ & set of jobs in corresponding queue \\
+                $S$ & set of jobs selected by scheduler \\
+                $v_i$ & value of $job_i \in J_{Q_R}$ defined by Equation~\ref{Equ:DefValue}\\
+                $dp(\cdot)$ & memo used in dynamic programming \\
+                $TS_{s\_x}$ & event timestamps of starting phase $x$ in simulation \\
+                $TS_{f\_x}$ & event timestamps of finishing phase $x$ in simulation \\
+                \hline
+        \end{tabular}
+\end{table}
+
+
+
