--- a/intro.tex
+++ b/intro.tex
@@ -89,7 +89,7 @@ this new resource upon job submission.
 
 \begin{figure}[!t]
         \centering
-        \includegraphics[width=4.0in]{BBArchitecture}
+        \includegraphics[width= 3.5in]{BBArchitectureShort}
         \caption{Trinity System Overview: A Burst Buffer Enabled Supercomputer}
         \label{Fig:BBArchitecture}
 \end{figure}
