dp's pseudo code
Signed-off-by: Jiaqi Yan@IIT-PC <littlepretty881203@gmail.com>

--- a/experiments.tex
+++ b/experiments.tex
@@ -25,8 +25,8 @@ This section evaluate Cerberus by answering several key questions.
 \end{itemize}
 We integrate Cerberus into our newly developed event-driven simulator, 
 BBSim, and evaluate Cerberus against the traditional FCFS/EASY backfilling scheduler.
-The source code of BBsim and Cerberus are public to the community,
-available at \footnote{https://github.com/urlplaceholder}.
+Codebase of BBsim and Cerberus are public to the community
+\footnote{Available at https://github.com/urlplaceholder}.
 % metric
 
 % We select two evaluation metrics, job's \textit{response time} and 
