--- a/intro.tex
+++ b/intro.tex
@@ -200,3 +200,11 @@ Trinity supercomputing platform on BBSim (Section~\ref{Sec:Experiments}).
 Related works are discussed in Section~\ref{Sec:RelatedWorks}.
 We conclude this paper and list possible future works in Section~\ref{Sec:Conclusion}.
 
+
+\begin{figure}[!htbp]
+        \centering
+        \includegraphics[width=3.6in]{CerberusBBSystem}
+        \caption{Scheduling Workflow of Burst Buffer Aware Cerberus}
+        \label{Fig:CerberusQueues}
+\end{figure}
+
